# jina-embed

./: Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml
.github/workflows/: build.yaml
.run/: API.run.xml
