[project]
name = "jina-embed"
version = "v0.1.3"
urls = { "homepage" = "https://github.com/joanfabregat/jina-embed" }
description = "An API to embed text using Jina"
authors = [
    { name = "Joan Fabrégat", email = "jfabregat@fogandfrog.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.95.0",
    "uvicorn>=0.22.0",
    "pydantic>=2.0.0",
    "fastembed>=0.6.0",
]


[dependency-groups]
gpu = [
    "fastembed-gpu>=0.6.0",
]
